📝 Update community + contributing docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,7 @@ nav:
 - Explanations:
   - 'explanations/understand-rag.md'
 - Community:
+  - 'community/welcome.md'
   - 'community/contribute.md'
   - 'community/brand.md'
 - References:
