--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -58,6 +58,8 @@ runs:
     - name: Install ragna
       shell: bash -el {0}
       run: |
+        # FIXME remove this after panel==1.3 is released
+        pip install --pre panel
         if [[ ${{ inputs.optional-dependencies }} == true ]]
         then
           PROJECT_PATH='.[builtin]'
