--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
-    "panel>=1.3,<1.4",
+    # FIXME: replace this with "panel>=1.3,<1.4", after it is released
+    "panel",
     "pydantic>=2",
     "pydantic-settings>=2",
     "PyJWT",
