--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "aiofiles",
+    "emoji",
     "fastapi",
     "huey",
     "httpx",
