--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,12 +2,17 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
-      - id: check-toml
-      - id: check-yaml
       - id: mixed-line-ending
-        args: [ --fix=lf ]
-        exclude: docs/make.bat
+        args: [--fix=lf]
       - id: end-of-file-fixer
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.3
+    hooks:
+      - id: prettier
+        types_or:
+          - markdown
+          - toml
+          - yaml
   - repo: https://github.com/omnilib/ufmt
     rev: v2.1.0
     hooks:
