--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for using Ragna and taking some time to contribute to this project.
+        Thanks for using Ragna and taking the time to contribute to this project.
   - type: textarea
     attributes:
       label: Feature description
@@ -22,8 +22,8 @@ body:
     attributes:
       label: Value and/or benefit
       description: |
-        What is the value of adding this feature, and who will benefit from it? Include any information that could help us prioritize the issue.
-        This section should contain "why" this issue should be resolved.
+        What is the value of adding this feature, and who will benefit from it?
+        Include any information that could help us prioritize the issue.
     validations:
       required: false
 
@@ -31,7 +31,6 @@ body:
     attributes:
       label: Anything else?
       description: |
-        Links? References? Anything that will give us more context about the issue you are encountering!
-        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+        Links? References? Anything that will give us more context!
     validations:
       required: false
