--- a/.github/ISSUE_TEMPLATE/support.yml
+++ b/.github/ISSUE_TEMPLATE/support.yml
@@ -1,22 +1,22 @@
 name: "Usage question 🙋🏽‍♀️"
 description: "Create a report to help us fix something that is currently broken."
 title: "[Q/A] - <title>"
-labels: ["type: question 🙋🏽‍♀️"]
+labels: ["type: question 🤔"]
 
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for reporting!
-        Before asking a question, please make sure the issue hasn't already been addressed by searching through
+        Thanks for your question!
+        Before asking a question, make sure it hasn't already been addressed by searching through
         the documentation and past issues in this repository.
 
   - type: textarea
     attributes:
-      label: Share your question
+      label: Question
       description: |
-        A clear and concise description of what the bug is.
-      placeholder: Be as precise as you can, describe what you expected to happen and what actually happened.
+        Share your question.
+        Include information about what you're trying to do and what you've tried so far.
     validations:
       required: true
 
@@ -27,3 +27,11 @@ body:
         Provide a minimal code example and detailed step-by-step guidelines to reproduce the error.
     validations:
       required: true
+
+  - type: textarea
+    attributes:
+      label: Anything else?
+      description: |
+        Links? References? Tracebacks? Screenshots? Anything that will give us more context!
+    validations:
+      required: false
