--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,8 @@ repos:
           - markdown
           - toml
           - yaml
+          - javascript
+          - css
   - repo: https://github.com/omnilib/ufmt
     rev: v2.1.0
     hooks:
