--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,7 @@ dependencies = [
     "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
-    # FIXME: replace this with "panel>=1.3,<1.4", after it is released
-    "panel",
+    "panel>=1.3,<1.4",
     "pydantic>=2",
     "pydantic-settings>=2",
     "PyJWT",
