--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -12,9 +12,8 @@ body:
     attributes:
       label: Feature description
       description: |
-        Describe what you are proposing. Provide as much context as possible and link to related issues and/or pull requests.
-        This section should contain "what" you are proposing.
-        Are you having any problems? Briefly describe what your painpoints are. For example: "I'm always frustrated when ..."
+        Describe "what" you are proposing.
+        Provide as much context as possible and link to related issues and/or pull requests.
     validations:
       required: true
 
