mark bug repro required

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -26,7 +26,7 @@ body:
       description: |
         Provide a minimal code example and detailed step-by-step guidelines to reproduce the error.
     validations:
-      required: false
+      required: true
 
   - type: textarea
     attributes:
