🔧 Add note on web app, hide what-is-rag

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,8 +64,8 @@ extra_css:
 nav:
   - "index.md"
   - "install.md"
-  - Explanations:
-      - "explanations/what-is-rag.md"
+  # - Explanations:
+  #     - "explanations/what-is-rag.md" # Hide for 0.1.0 release
   - Tutorials:
       - "tutorials/python-api.md"
       - "tutorials/rest-api.md"
