--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,13 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "aiofiles",
+    "emoji",
     "fastapi",
     "huey",
     "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
+    "panel>=1.3,<1.4",
     "pydantic>=2",
     "pydantic-settings>=2",
     "PyJWT",
@@ -111,9 +113,18 @@ warn_unused_configs = true
 
 [[tool.mypy.overrides]]
 module = [
+    "ragna._ui.*",
+]
+disallow_untyped_calls = false
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+
+[[tool.mypy.overrides]]
+module = [
     "fitz",
     "huey.*",
     "lancedb",
+    "param",
     "pyarrow",
     "sentence_transformers",
 ]
