--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 contact_links:
   - name: Documentation
-    url: https://docs.ragna.chat/
+    url: https://ragna.chat/
   - name: User support forum (GitHub Discussions)
     url: https://github.com/Quansight/ragna/discussions
   - name: Blank issue (maintainers only)
