--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "packaging",
     "panel>=1.3,<1.4",
     "pydantic>=2",
+    "pydantic-core",
     "pydantic-settings>=2",
     "PyJWT",
     "python-multipart",
