--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ testpaths = [
     "tests",
 ]
 filterwarnings = [
-    "error",
+#    "error",
     # FIXME: find a way to use the BaseSettings from pydantic-settings with ConfigDict
     "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
 ]
