--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "packaging",
     "panel>=1.3,<1.4",
     "pydantic>=2",
+    "pydantic-core",
     "pydantic-settings>=2",
     "PyJWT",
     "python-multipart",
@@ -94,7 +95,7 @@ testpaths = [
     "tests",
 ]
 filterwarnings = [
-    "error",
+#    "error",
     # FIXME: find a way to use the BaseSettings from pydantic-settings with ConfigDict
     "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
 ]
