✨ Inital setup and corresponding fixes to code in docs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-ragna.toml
-ragna/_version.py
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -167,3 +164,8 @@ cython_debug/
 
 # VSCode
 .vscode/
+
+# Ragna
+ragna.toml
+ragna/_version.py
+ragna.txt
