--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -12,6 +12,7 @@ dependencies:
       - python-dotenv
       - boto3
       - pytest >=6
+      - pytest-mock
       - mypy ==1.6.1
       - pre-commit
       - types-aiofiles
