--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,6 +9,19 @@ build:
   os: ubuntu-22.04
   tools:
     python: "mambaforge-22.9"
+  jobs:
+    post_checkout:
+      # Enable checking out git-lfs files on RTD
+      # See https://docs.readthedocs.io/en/stable/build-customization.html#support-git-lfs-large-file-storage
+      - wget
+        https://github.com/git-lfs/git-lfs/releases/download/v3.1.4/git-lfs-linux-amd64-v3.4.0.tar.gz
+      - tar xvfz git-lfs-linux-amd64-v3.4.0.tar.gz
+      - git config filter.lfs.process "`pwd`/git-lfs filter-process"
+      - git config filter.lfs.smudge  "`pwd`/git-lfs smudge -- %f"
+      - git config filter.lfs.clean "`pwd`/git-lfs clean -- %f"
+      - ./git-lfs install
+      - ./git-lfs fetch
+      - ./git-lfs checkout
 
 mkdocs:
   configuration: mkdocs.yml
