--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,9 +95,7 @@ testpaths = [
     "tests",
 ]
 filterwarnings = [
-#    "error",
-    # FIXME: find a way to use the BaseSettings from pydantic-settings with ConfigDict
-    "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
+    "error",
 ]
 xfail_strict = true
 
