--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,12 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "aiofiles",
+    "anyio",
     "emoji",
     "fastapi",
-    "huey",
     "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
+    "nest-asyncio",
     "packaging",
     "panel>=1.3,<1.4",
     "pydantic>=2",
@@ -135,7 +136,6 @@ disallow_incomplete_defs = false
 [[tool.mypy.overrides]]
 module = [
     "fitz",
-    "huey.*",
     "lancedb",
     "param",
     "pyarrow",
