--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ write_to = "ragna/_version.py"
 local_scheme = "node-and-timestamp"
 
 [project.scripts]
-ragna = "ragna._cli:app"
+ragna = "ragna.__main__:app"
 
 [tool.setuptools.packages.find]
 include = [
@@ -127,7 +127,7 @@ warn_unused_configs = true
 
 [[tool.mypy.overrides]]
 module = [
-    "ragna._ui.*",
+    "ragna.deploy._ui.*",
 ]
 disallow_untyped_calls = false
 disallow_untyped_defs = false
@@ -146,7 +146,7 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = [
-    "ragna._api.orm",
+    "ragna.deploy._api.orm",
 ]
 # Our ORM schema doesn't really work with mypy. There are some other ways to define it
 # to play ball. We should do that in the future.
