run CI on release branches

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,9 @@ on:
       - "tests/**"
       - "environment-dev.yml"
       - "pyproject.toml"
+  push:
+    branches:
+      - release/*
 
 jobs:
   importable:
