--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,7 +1,6 @@
 name: "Bug report 🐛"
 description: "Create a report to help us fix something that is currently broken."
-title: "<title>"
-labels: ["type: bug"]
+labels: ["type: bug 🐛"]
 
 body:
   - type: markdown
