implement streaming for the API

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "redis",
     "questionary",
     "rich",
+    "sse-starlette",
     "sqlalchemy>=2",
     "tomlkit",
     "typer",
