--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -12,7 +12,7 @@ build:
 
 mkdocs:
   configuration: mkdocs.yml
-  fail_on_warning: true
+#  fail_on_warning: true
 
 # Optionally declare the Python requirements required to build your docs
 conda:
