--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,7 +49,7 @@ jobs:
           VERSION=$(python -m setuptools_scm)
           echo "version=${VERSION}" | tee --append $GITHUB_OUTPUT
 
-          TAG=echo "${VERSION}" | sed 's/+/-/g'
+          TAG=$(echo "${VERSION}" | sed 's/+/-/g')
           echo "tag=${TAG}" | tee --append $GITHUB_OUTPUT
 
       - name: Login to Quay.io
