add pip-tools to dev requirements

--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -15,6 +15,7 @@ dependencies:
       - types-aiofiles
       - sqlalchemy-stubs
       - setuptools-scm
+      - pip-tools
       # documentation
       - mkdocs
       - mkdocs-material
