--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -58,6 +58,11 @@ runs:
       shell: bash -el {0}
       run: mamba install --yes --channel conda-forge redis-server
 
+    # FIXME: remove before merge
+    - name: Install panel RC
+      shell: bash -el {0}
+      run: pip install --upgrade --pre 'panel>=1.3, <1.4'
+
     - name: Install ragna
       shell: bash -el {0}
       run: |
