--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,8 +20,8 @@ concurrency:
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 env:
-  DOCKER_REGISTRY: quay.io
-  DOCKER_IMAGE: quansight/ragna
+  REGISTRY: quay.io
+  PROJECT: quansight/ragna
 
 jobs:
   build:
@@ -64,20 +64,23 @@ jobs:
       - name: Setup metadata
         id: metadata
         run: |
+          IMAGE_NAME="${{ env.REGISTRY }}/${{ env.PROJECT }}"
+          echo "image-name=${IMAGE_NAME}" | tee --append $GITHUB_OUTPUT
+
           VERSION=$(python -m setuptools_scm)
           echo "version=${VERSION}" | tee --append $GITHUB_OUTPUT
 
           TAG=$(echo "${VERSION}" | sed 's/+/-/g')
           echo "tag=${TAG}" | tee --append $GITHUB_OUTPUT
 
-          IMAGE_NAME=${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE}}:${{steps.metadata.outputs.tag }}
-          echo "image-name=${IMAGE_NAME}" | tee --append $GITHUB_OUTPUT
+          TAGGED_IMAGE_NAME="${IMAGE_NAME}:${TAG}"
+          echo "tagged-image-name=${TAGGED_IMAGE_NAME}" | tee --append $GITHUB_OUTPUT
 
       - name: Login to Quay.io
         if: ${{ github.event_name == 'workflow_dispatch' }}
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.DOCKER_REGISTRY }}
+          registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
@@ -87,8 +90,7 @@ jobs:
         with:
           cache-from: type=local,src=${{ steps.cache.outputs.cache-dir }}
           cache-to: type=local,dest=${{ steps.cache.outputs.cache-dir }}
-          # prettier-ignore
-          tags: ${{ steps.metadata.outputs.image-name }}
+          tags: ${{ steps.metadata.outputs.tagged-image-name }}
           build-args: |
             SETUPTOOLS_SCM_PRETEND_VERSION_FOR_RAGNA=${{ steps.metadata.outputs.version }}
           # Unfortunately, there currently seems to be no way to build a multiplatform
@@ -103,4 +105,4 @@ jobs:
           push: ${{ github.event_name == 'workflow_dispatch' }}
 
       - name: Smoke test
-        run: docker run ${{ steps.metadata.outputs.image-name }} --version
+        run: docker run ${{ steps.metadata.outputs.tagged-image-name }} --version
