--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -13,6 +13,8 @@ dependencies:
       - pre-commit
       - types-aiofiles
       - sqlalchemy-stubs
+      - setuptools-scm
+      - pip-tools
       # documentation
       - mkdocs
       - mkdocs-material
