--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -39,9 +39,9 @@ jobs:
           echo "needs-update=${NEEDS_UPDATE}" | tee --append $GITHUB_OUTPUT
 
       - name: Open a PR to update the requirements
+        # prettier-ignore
         if:
-          ${{ steps.update.outputs.needs-update && github.event_name ==
-          'workflow_dispatch' }}
+          ${{ steps.update.outputs.needs-update && github.event_name == 'workflow_dispatch' }}
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: update requirements-docker.lock
@@ -53,7 +53,7 @@ jobs:
           assignees: ${{ github.actor }}
 
       - name: Show diff
+        # prettier-ignore
         if:
-          ${{ steps.update.outputs.needs-update && github.event_name !=
-          'workflow_dispatch' }}
+          ${{ steps.update.outputs.needs-update && github.event_name != 'workflow_dispatch' }}
         run: git diff
