add write permissions for GHA bot

--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -8,6 +8,10 @@ on:
       - "requirements-docker.lock"
   workflow_dispatch:
 
+permissions:
+  pull-requests: write
+  contents: write
+
 jobs:
   update:
     runs-on: ubuntu-latest
