--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Open a PR to update the requirements
         # prettier-ignore
         if:
-          ${{ steps.update.outputs.needs-update && github.event_name == 'workflow_dispatch' }}
+          ${{ steps.update.outputs.needs-update }}
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: update requirements-docker.lock
