--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -51,6 +51,7 @@ jobs:
           commit-message: update requirements-docker.lock
           branch: update-docker-requirements
           branch-suffix: timestamp
+          base: ${{ github.head_ref || github.ref_name }}
           title: Update requirements-docker.lock
           body:
             https://github.com/{{ github.repository }}/actions/runs/{{ github.run_id }}
