--- a/.github/workflows/update-docker-requirements.yml
+++ b/.github/workflows/update-docker-requirements.yml
@@ -43,7 +43,7 @@ jobs:
           echo "needs-update=${NEEDS_UPDATE}" | tee --append $GITHUB_OUTPUT
 
       - name: Debug
-        run: echo '${{ toJSON(github) }}' | jq
+        run: echo ${{ toJSON(github) }} | jq
 
       - name: Open a PR to update the requirements
         # prettier-ignore
