--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -22,5 +22,4 @@ dependencies:
       - mkdocs-gen-files
       - material-plausible-plugin
       - mktestdocs
-      # FIXME: replace this with a stable release when available
-      - mkdocs-gallery @ git+https://github.com/pmeier/mkdocs-gallery@async-gallery
+      - mkdocs-gallery >=0.10
