--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,7 @@ all = [
     "pyarrow",
     "pymupdf>=1.23.6",
     "python-docx",
+    "python-pptx",
     "tiktoken",
 ]
 
@@ -143,6 +144,7 @@ module = [
     "param",
     "pyarrow",
     "docx",
+    "pptx",
     "sentence_transformers",
 ]
 ignore_missing_imports = true
