add google assistants

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,12 +139,14 @@ disallow_incomplete_defs = false
 
 [[tool.mypy.overrides]]
 module = [
+    "docx",
     "fitz",
+    "json_stream",
+    "json_stream.httpx",
     "lancedb",
     "param",
-    "pyarrow",
-    "docx",
     "pptx",
+    "pyarrow",
     "sentence_transformers",
 ]
 ignore_missing_imports = true
