--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "emoji",
     "fastapi",
     "httpx",
-    "httpx_sse",
+    "httpx-sse",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
     "panel>=1.3.6,<1.4",
@@ -56,6 +56,7 @@ Repository = "https://github.com/Quansight/ragna"
 # to update the array below, run scripts/update_optional_dependencies.py
 all = [
     "chromadb>=0.4.13",
+    "json-stream",
     "lancedb>=0.2",
     "pyarrow",
     "pymupdf>=1.23.6",
