[PoC] use ijson over json-stream

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,8 +142,7 @@ disallow_incomplete_defs = false
 module = [
     "docx",
     "fitz",
-    "json_stream",
-    "json_stream.httpx",
+    "ijson",
     "lancedb",
     "param",
     "pptx",
