track new files as well

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,20 +1,20 @@
 # Read the Docs configuration file for MkDocs projects
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
 version: 2
 
-# Set the version of Python and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
     python: "mambaforge-22.9"
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
 
 mkdocs:
   configuration: mkdocs.yml
   fail_on_warning: true
 
-# Optionally declare the Python requirements required to build your docs
 conda:
   environment: environment-dev.yml
 
@@ -23,4 +23,4 @@ python:
     - method: pip
       path: .
       extra_requirements:
-        - complete
+        - all
