--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,7 +13,7 @@ build:
 
 mkdocs:
   configuration: mkdocs.yml
-#  fail_on_warning: true
+  fail_on_warning: true
 
 conda:
   environment: environment-dev.yml
