--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "httpx-sse",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
-    "panel>=1.3.6,<1.4",
+    "panel==1.3.8",
     "pydantic>=2",
     "pydantic-core",
     "pydantic-settings>=2",
