move BC policy into documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,4 +89,4 @@ nav:
       - "references/rest-api.md"
       - "references/cli.md"
       - "references/faq.md"
-      - "references/changelog.md"
+      - "references/release-notes.md"
