--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ plugins:
       examples_dirs: docs/examples
       gallery_dirs: docs/generated/gallery
       filename_pattern: /example_
+      default_thumb_file: docs/assets/brand/logo-symbol/logo-symbol.svg
   - gen-files:
       scripts:
         - scripts/docs/gen_files.py
