--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
-*.png filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+docs/assets/brand/logo-lockup-horizontal/*.png  !filter !diff !merge text
+docs/how-tos/images/ragna-config-wizard.png filter=lfs diff=lfs merge=lfs -text
