--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
-docs/assets/brand/logo-lockup-horizontal/*.png  !filter !diff !merge text
+*.png filter=lfs diff=lfs merge=lfs -text
+docs/assets/brand/*.png  -filter=lfs -diff=lfs -merge=lfs -text
