--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
-docs/assets/brand/*.png  -filter=lfs -diff=lfs -merge=lfs -text
+docs/assets/brand/**/*.png  -filter=lfs -diff=lfs -merge=lfs -text
