--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,6 @@
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.svg filter=lfs diff=lfs merge=lfs -text
 docs/assets/brand/**/*.png  -filter=lfs -diff=lfs -merge=lfs -text
+docs/assets/brand/**/*.svg  -filter=lfs -diff=lfs -merge=lfs -text
