--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,4 +93,4 @@ nav:
       - references/rest-api.md
       - references/cli.md
       - references/faq.md
-      - references/changelog.md
+      - references/release-notes.md
