--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,14 +79,13 @@ nav:
       - "tutorials/python-api.md"
       - "tutorials/rest-api.md"
       - "tutorials/web-app.md"
-  - How-to:
-      - "how-tos/set-configuration.md"
   - Community:
       - "community/welcome.md"
       - "community/contribute.md"
   - References:
       - "references/python-api.md"
-      - "references/rest-api.md"
       - "references/cli.md"
+      - "references/config.md"
+      - "references/rest-api.md"
       - "references/faq.md"
       - "references/release-notes.md"
