--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,5 @@
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.svg filter=lfs diff=lfs merge=lfs -text
-docs/assets/brand/**/*.png !filter !diff !merge text
-docs/assets/brand/**/*.svg !filter !diff !merge text
-ragna/deploy/_ui/imgs/*.svg !filter !diff !merge text
+docs/assets/brand/**/* !filter !diff !merge text
+ragna/**/* !filter !diff !merge text
