--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          lfs: true
 
       - name: Setup environment
         uses: ./.github/actions/setup-env
@@ -28,7 +27,8 @@ jobs:
       - name: Test optional dependencies
         run: |
           python scripts/update_optional_dependencies.py
-  #          git diff --exit-code
+          git diff --exit-code
+
   format:
     runs-on: ubuntu-latest
     defaults:
